--- a/LendingSystem/Views/Software/CollectionList.cshtml
+++ b/LendingSystem/Views/Software/CollectionList.cshtml
@@ -123,6 +123,23 @@
     </div>
 </div>
 
+<div class="modal fae" id="modalCollectionDeleteForm" role="dialog">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="modalTitle">Delete Collection</h4>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this collection?
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-danger" onclick="buttonClickConfirmDeleteCollection()">Delete</button>
+                <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script type="text/javascript">
     var wijmoInputDateStartDate;
     var wijmoInputDateEndDate;
@@ -300,9 +317,39 @@
     }
 
     function buttonClickDelete() {
+        $("#modalCollectionDeleteForm").modal({
+            show: true,
+            backdrop: "static"
+        });
+    }
+
+    function buttonClickConfirmDeleteCollection() {
         wijmoCollectionViewCollectionList.editItem(wijmoCollectionViewCollectionList.currentItem);
         var id = wijmoCollectionViewCollectionList.currentEditItem.Id;
 
+        $.ajax({
+            url: "/api/collection/delete/" + id,
+            type: "DELETE",
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            statusCode: {
+                200: function () {
+                    buttonGetData();
+
+                    $("#modalCollectionDeleteForm").modal("hide");
+                    toastr.success("Delete Successful");
+                },
+                404: function (message) {
+                    toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 404 - Not Found");
+                },
+                400: function (message) {
+                    toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 400 - Bad Request");
+                },
+                500: function (message) {
+                    toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 500 - Internal Server Error");
+                }
+            }
+        });
     }
 
     function buttonClickCreateCollection() {
