--- a/LendingSystem/Views/Software/LoanList.cshtml
+++ b/LendingSystem/Views/Software/LoanList.cshtml
@@ -87,6 +87,23 @@
     </div>
 </div>
 
+<div class="modal fae" id="modalLoanDeleteForm" role="dialog">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="modalTitle">Delete Loan</h4>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this loan?
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-danger" onclick="buttonClickConfirmDeleteLoan()">Delete</button>
+                <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script type="text/javascript">
     var wijmoInputDateStartDate;
     var wijmoInputDateEndDate;
@@ -373,9 +390,39 @@
     }
 
     function buttonClickDelete() {
+        $("#modalLoanDeleteForm").modal({
+            show: true,
+            backdrop: "static"
+        });
+    }
+
+    function buttonClickConfirmDeleteLoan() {
         wijmoCollectionViewLoanList.editItem(wijmoCollectionViewLoanList.currentItem);
         var id = wijmoCollectionViewLoanList.currentEditItem.Id;
 
+        $.ajax({
+            url: "/api/loan/delete/" + id,
+            type: "DELETE",
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            statusCode: {
+                200: function () {
+                    buttonGetData();
+
+                    $("#modalLoanDeleteForm").modal("hide");
+                    toastr.success("Delete Successful");
+                },
+                404: function (message) {
+                    toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 404 - Not Found");
+                },
+                400: function (message) {
+                    toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 400 - Bad Request");
+                },
+                500: function (message) {
+                    toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 500 - Internal Server Error");
+                }
+            }
+        });
     }
 
     window.onload = function () {
