--- a/LendingSystem/Views/Software/CollectorList.cshtml
+++ b/LendingSystem/Views/Software/CollectorList.cshtml
@@ -1,11 +1,265 @@
 ﻿@{
-    ViewBag.Title = "Collector List";
+    ViewBag.Title = "Collectors List";
 }
 
 <h2>@ViewBag.Title</h2>
 <div>
     <h4>List of all collectors</h4>
-    <hr />
-    
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <a href="/Software" class="btn btn-default">Back</a>
+            <button class="btn btn-primary" onclick="buttonClickAddCollector()">Add</button>
+        </div>
+        <div class="panel-body">
+            <div id="wijmoGridCollectorList"></div>
+        </div>
+    </div>
 </div>
 
+<div class="modal fae" id="modalCollectorDetailForm" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="modalTitle">Collector Detail</h4>
+            </div>
+            <div class="modal-body">
+                <dl class="dl-horizontal">
+                    <dt>
+                        Collector:
+                    </dt>
+                    <dd>
+                        <input class="form-control" id="inputCollector" />
+                    </dd>
+                </dl>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary" onclick="buttonClickSaveCollector()">Save</button>
+                <button class="btn btn-danger" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fae" id="modalCollectorDeleteForm" role="dialog">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="modalTitle">Delete Collector</h4>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this collector?
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-danger" onclick="buttonClickConfirmDeleteCollector()">Delete</button>
+                <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript">
+    var wijmoGridCollectorList;
+    var wijmoCollectionViewCollectorList;
+    var collectorId = 0;
+
+    function getDataCollectorList() {
+        var collectorListObservableArray = new wijmo.collections.ObservableArray;
+
+        $.ajax({
+            url: "/api/collector/list",
+            cache: false,
+            type: "GET",
+            contentType: "application/json; charset=utf-8",
+            success: function (results) {
+                if (results.length > 0) {
+                    for (var i = 0; i < results.length; i++) {
+                        collectorListObservableArray.push({
+                            ButtonEdit: "<button class='btn btn-primary btn-xs btn-block' onclick='buttonClickEditCollector()'>Edit</button>",
+                            ButtonDelete: "<button class='btn btn-danger btn-xs btn-block' onclick='buttonClickDeleteCollector()'>Delete</button>",
+                            Id: results[i]["Id"],
+                            Collector: results[i]["Collector"]
+                        });
+                    }
+                }
+            }
+        });
+
+        return collectorListObservableArray;
+    }
+
+    function createWijmoGridCollectorList() {
+        wijmoCollectionViewCollectorList = new wijmo.collections.CollectionView(getDataCollectorList());
+        wijmoCollectionViewCollectorList.canFilter = true;
+
+        wijmoGridCollectorList = new wijmo.grid.FlexGrid("#wijmoGridCollectorList");
+        wijmoGridCollectorList.initialize({
+            columns: [
+                {
+                    "header": "Edit",
+                    "binding": "ButtonEdit",
+                    "width": 70,
+                    "align": "center",
+                    "allowResizing": false,
+                    "allowSorting": false,
+                    "isContentHtml": true
+                },
+                {
+                    "header": "Delete",
+                    "binding": "ButtonDelete",
+                    "width": 70,
+                    "align": "center",
+                    "allowResizing": false,
+                    "allowSorting": false,
+                    "isContentHtml": true
+                },
+                {
+                    "header": "Collector",
+                    "binding": "Collector",
+                    "allowSorting": true,
+                    "width": "*"
+                }
+            ],
+            autoGenerateColumns: false,
+            itemsSource: wijmoCollectionViewCollectorList,
+            isReadOnly: true,
+            autoSizeMode: wijmo.grid.AutoSizeMode.Both,
+            allowDragging: wijmo.grid.AllowDragging.None,
+            selectionMode: wijmo.grid.SelectionMode.Row
+        });
+    }
+
+    function buttonClickAddCollector() {
+        document.getElementById("modalTitle").innerHTML = "Add Collector";
+
+        $("#modalCollectorDetailForm").modal({
+            show: true,
+            backdrop: "static"
+        });
+
+        collectorId = 0;
+        document.getElementById("inputCollector").value = "";
+    }
+
+    function buttonClickSaveCollector() {
+        var fullName = document.getElementById("inputCollector").value;
+
+        var collectorObject = new Object();
+        collectorObject.Collector = fullName;
+        var collectorData = JSON.stringify(collectorObject);
+
+        if (collectorId == 0) {
+            $.ajax({
+                url: "/api/collector/save",
+                type: "POST",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                data: collectorData,
+                statusCode: {
+                    200: function () {
+                        wijmoCollectionViewCollectorList = new wijmo.collections.CollectionView(getDataCollectorList());
+                        wijmoCollectionViewCollectorList.canFilter = true;
+                        wijmoGridCollectorList.itemsSource = wijmoCollectionViewCollectorList;
+
+                        $("#modalCollectorDetailForm").modal("hide");
+                        toastr.success("Save Successful");
+                    },
+                    404: function (message) {
+                        toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 404 - Not Found");
+                    },
+                    400: function (message) {
+                        toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 400 - Bad Request");
+                    },
+                    500: function (message) {
+                        toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 500 - Internal Server Error");
+                    }
+                }
+            });
+        } else {
+            $.ajax({
+                url: "/api/collector/update/" + collectorId,
+                type: "PUT",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                data: collectorData,
+                statusCode: {
+                    200: function () {
+                        wijmoCollectionViewCollectorList = new wijmo.collections.CollectionView(getDataCollectorList());
+                        wijmoCollectionViewCollectorList.canFilter = true;
+                        wijmoGridCollectorList.itemsSource = wijmoCollectionViewCollectorList;
+
+                        $("#modalCollectorDetailForm").modal("hide");
+                        toastr.success("Update Successful");
+                    },
+                    404: function (message) {
+                        toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 404 - Not Found");
+                    },
+                    400: function (message) {
+                        toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 400 - Bad Request");
+                    },
+                    500: function (message) {
+                        toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 500 - Internal Server Error");
+                    }
+                }
+            });
+        }
+    }
+
+    function buttonClickEditCollector() {
+        document.getElementById("modalTitle").innerHTML = "Edit Collector";
+
+        $("#modalCollectorDetailForm").modal({
+            show: true,
+            backdrop: "static"
+        });
+
+        wijmoCollectionViewCollectorList.editItem(wijmoCollectionViewCollectorList.currentItem);
+
+        var id = wijmoCollectionViewCollectorList.currentEditItem.Id;
+        var collector = wijmoCollectionViewCollectorList.currentEditItem.Collector;
+
+        collectorId = id;
+        document.getElementById("inputCollector").value = collector;
+    }
+
+    function buttonClickDeleteCollector() {
+        $("#modalCollectorDeleteForm").modal({
+            show: true,
+            backdrop: "static"
+        });
+    }
+
+    function buttonClickConfirmDeleteCollector() {
+        wijmoCollectionViewCollectorList.editItem(wijmoCollectionViewCollectorList.currentItem);
+        var id = wijmoCollectionViewCollectorList.currentEditItem.Id;
+
+        $.ajax({
+            url: "/api/collector/delete/" + id,
+            type: "DELETE",
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            statusCode: {
+                200: function () {
+                    wijmoCollectionViewCollectorList = new wijmo.collections.CollectionView(getDataCollectorList());
+                    wijmoCollectionViewCollectorList.canFilter = true;
+                    wijmoGridCollectorList.itemsSource = wijmoCollectionViewCollectorList;
+
+                    $("#modalCollectorDeleteForm").modal("hide");
+                    toastr.success("Delete Successful");
+                },
+                404: function (message) {
+                    toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 404 - Not Found");
+                },
+                400: function (message) {
+                    toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 400 - Bad Request");
+                },
+                500: function (message) {
+                    toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 500 - Internal Server Error");
+                }
+            }
+        });
+    }
+
+    window.onload = function () {
+        createWijmoGridCollectorList();
+    }
+</script>
