--- a/LendingSystem/Views/Software/Index.cshtml
+++ b/LendingSystem/Views/Software/Index.cshtml
@@ -17,7 +17,7 @@
         </div>
         <div class="col-lg-4">
             <a href="/Software/Reports" class="btn btn-info btn-lg btn-block" style="padding-top: 50px; padding-bottom: 50px;">Reports</a>
-            <a href="/Software/UserList" class="btn btn-success btn-lg btn-block" style="padding-top: 50px; padding-bottom: 50px;">User</a>
+            @*<a href="/Software/UserList" class="btn btn-success btn-lg btn-block" style="padding-top: 50px; padding-bottom: 50px;">User</a>*@
         </div>
     </div>
 </div>
